# storage/api-docs/api-docs.json
@@ -207,7 +207,7 @@
                         }
                     },
                     {
-                        "name": "per_page",
+                        "name": "limit",
                         "in": "query",
                         "description": "Number of items per page",
                         "required": false,
@@ -225,25 +225,21 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "current_page": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "data": {
+                                        "items": {
                                             "type": "array",
                                             "items": {
                                                 "properties": {
                                                     "person_id": {
                                                         "type": "integer",
-                                                        "example": 10
+                                                        "example": 998
                                                     },
                                                     "name": {
                                                         "type": "string",
-                                                        "example": "Alicia"
+                                                        "example": "Annalise Schultz"
                                                     },
                                                     "age": {
                                                         "type": "integer",
-                                                        "example": 23
+                                                        "example": 22
                                                     },
                                                     "pictures": {
                                                         "type": "array",
@@ -251,17 +247,38 @@
                                                             "type": "string"
                                                         },
                                                         "example": [
-                                                            "url1",
-                                                            "url2"
+                                                            "https://via.placeholder.com/640x480.png/00dd88?text=people+qui",
+                                                            "https://picsum.photos/640/480?random=656"
                                                         ]
                                                     },
                                                     "liked_at": {
                                                         "type": "string",
-                                                        "example": "2025-01-01 12:00:00"
+                                                        "example": "2025-12-05 08:39:39"
                                                     }
                                                 },
                                                 "type": "object"
                                             }
+                                        },
+                                        "meta": {
+                                            "properties": {
+                                                "page": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "limit": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "total": {
+                                                    "type": "integer",
+                                                    "example": 8
+                                                },
+                                                "total_page": {
+                                                    "type": "integer",
+                                                    "example": 4
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -331,7 +348,7 @@
                         }
                     },
                     {
-                        "name": "per_page",
+                        "name": "limit",
                         "in": "query",
                         "description": "Number of items per page",
                         "required": false,
@@ -349,25 +366,21 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "current_page": {
-                                            "type": "integer",
-                                            "example": 1
-                                        },
-                                        "data": {
+                                        "items": {
                                             "type": "array",
                                             "items": {
                                                 "properties": {
                                                     "id": {
                                                         "type": "integer",
-                                                        "example": 10
+                                                        "example": 998
                                                     },
                                                     "name": {
                                                         "type": "string",
-                                                        "example": "Alicia"
+                                                        "example": "Annalise Schultz"
                                                     },
                                                     "age": {
                                                         "type": "integer",
-                                                        "example": 23
+                                                        "example": 22
                                                     },
                                                     "pictures": {
                                                         "type": "array",
@@ -375,8 +388,8 @@
                                                             "type": "string"
                                                         },
                                                         "example": [
-                                                            "https://cdn.app.com/1.jpg",
-                                                            "https://cdn.app.com/2.jpg"
+                                                            "https://via.placeholder.com/640x480.png/00dd88?text=people+qui",
+                                                            "https://picsum.photos/640/480?random=656"
                                                         ]
                                                     },
                                                     "distance_km": {
@@ -387,6 +400,27 @@
                                                 },
                                                 "type": "object"
                                             }
+                                        },
+                                        "meta": {
+                                            "properties": {
+                                                "page": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "limit": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "total": {
+                                                    "type": "integer",
+                                                    "example": 8
+                                                },
+                                                "total_page": {
+                                                    "type": "integer",
+                                                    "example": 4
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
